--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
     <title></title>
 </head>
 <body>
-    <script src="index.js"></script>
+
+    <input type="text" name="country" class="input-control"/>
+
+    <script src="./index.js"></script>
 </body>
 </html>
+
