--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title></title></head><body> <input type="text" name="country" class="input-control"> <script src="/src.c23957a0.js"></script> </body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title></title></head><body> <input type="text" name="country" class="input-control"> <div class="container-js"> </div> <script src="/src.c23957a0.js"></script> </body></html>
