--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
 
     <input type="text" name="country" class="input-control"/>
 
+    <div class='container-js'>
+
+    </div>
     <script src="./index.js"></script>
 </body>
 </html>
