--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 
-    <input type="text" name="country" class="input-control"/>
+    <div class="input-js">
+        <input type="text" name="country" class="input-control" />
+    </div>
 
     <div class='container-js'>
 
