--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <input type="text" name="country" class="input-control" />
     </div>
 
-    <div class='container-js'>
+    <div class="container-js">
 
     </div>
     <script src="./index.js"></script>
