--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,13 @@
 <body>
 
     <div class="input-js">
-        <input type="text" name="country" class="input-control" />
+        <input type="text" name="input" class="input-control" />
     </div>
 
     <div class="container-js">
 
     </div>
+
     <script src="./index.js"></script>
 </body>
 </html>
