--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./common.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>hw-12</title>
 </head>
 <body>
 
