--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="input-js">
-        <input type="text" name="input" class="input-control" />
+        <input type="text" name="input" id="country-name" class="input-control" />
     </div>
 
     <div class="container-js">
